--- a/.github/workflows/main_eduvizapi.yml
+++ b/.github/workflows/main_eduvizapi.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy ASP.Net Core app to Azure Web App - EduVizAPI
 
 on:
@@ -24,14 +21,14 @@ jobs:
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
-      - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}\EduViz
+      - name: Publish with dotnet
+        run: dotnet publish --configuration Release --output ${{ runner.temp }}/EduViz
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: .net-app
-          path: ${{env.DOTNET_ROOT}}\EduViz
+          name: dotnet-app
+          path: ${{ runner.temp }}/EduViz
 
   deploy:
     runs-on: windows-latest
@@ -40,20 +37,20 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
+      id-token: write # This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: .net-app
-      
+          name: dotnet-app
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_E8EC21317D2C4D248159CBAA457D458A }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_BF063059DCF6410083EB900FEB222FB5 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_3DB57FCB61BB4A8E9D013D66828D1BAE }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -62,4 +59,3 @@ jobs:
           app-name: 'EduVizAPI'
           slot-name: 'Production'
           package: .
-          
