--- a/EduViz/Web.config
+++ b/EduViz/Web.config
@@ -2,13 +2,16 @@
 <configuration>
     <system.webServer>
         <handlers>
+            <!-- ASP.NET Core Module V2 handler -->
             <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
         </handlers>
-        <aspNetCore processPath="dotnet" arguments=".\EduViz.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="InProcess">
+
+        <!-- ASP.NET Core settings -->
+        <aspNetCore processPath="dotnet" arguments=".\EduViz.dll" stdoutLogEnabled="false" stdoutLogFile="\\?\%home%\LogFiles\stdout" hostingModel="InProcess">
             <environmentVariables>
+                <!-- Environment variable to specify Production environment -->
                 <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Production" />
             </environmentVariables>
         </aspNetCore>
     </system.webServer>
 </configuration>
-
