update: upload image

--- a/EduViz/appsettings.json
+++ b/EduViz/appsettings.json
@@ -23,5 +23,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Cloudinary": {
+    "CloudName": "dbnnedoks",
+    "ApiKey": "116574496113863",
+    "ApiSecret": "tcj54CRuPXDzLMqNwmt4himvNQI"
+  },
   "AllowedHosts": "*"
 }
