--- a/EduViz/appsettings.Development.json
+++ b/EduViz/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:eduvizdatabase.database.windows.net,1433;Initial Catalog=EduVizDB;Persist Security Info=False;User ID=EduVizAdmin;Password=Huy@03112003;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=localhost;Database=EduVizDB;User ID=sa;Password=1234567890;TrustServerCertificate=True;Trusted_Connection=True"
   }
 }
